<resources>
    <string name="app_name">HomeFood</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="facebook_app_id">689621651767627</string>
    <string name="fb_login_protocol_scheme">fb689621651767627</string>

    <string name="menu_home">Nos Menus</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_order">Mes Commandes</string>
    <string name="menu_offer">Nos Offres</string>
    <string name="menu_customer_service">Service Client</string>
    <string name="menu_settings">Réglages</string>
    <string name="dish_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor.</string>
    <string name="continu">Continuer</string>
    <string name="total_price">Prix Total</string>
    <string name="discount">Réduction</string>
    <string name="subtotal">Prix initial</string>
    <string name="empty_cart">Panier Vide</string>
    <string name="my_cart">Mon Panier</string>
    <string name="user_name">Nom utilisateur</string>
    <string name="user_phone">Numéro de téléphone</string>
    <string name="user_email">Votre Email</string>
    <string name="user_password">Mot de passe</string>
    <string name="authentification_failed">Authentification échouée.</string>
    <string name="account_creates_suuessfully">Félitation, votre compte a été créé avec succès!</string>
    <string name="all_field_mandatory">Veuillez remplir tous les champs</string>
    <string name="sign_in">Se connecter</string>
    <string name="SIGN_IN">SE CONNECTER</string>
    <string name="SIGN_UP">S\'ENREGISTRER</string>
    <string name="you_are_logined">Vous êtes connectés!!</string>
    <string name="google_login_successfully">Connexion avec google réussie!</string>
    <string name="facebook_login_successfully">Connexion avec facebook réussie!</string>
    <string name="order_type">Type de commande</string>
    <string name="payment_method">Mode de paiement</string>
    <string name="order_completed">Commande Validée</string>
    <string name="bye_now">Payer maintenant</string>
    <string name="complete_payment">Confirmer le paiement</string>
    <string name="checkout">Checkout</string>
    <string name="order_completed_message">Vous allez recevoir un message de confirmation avec tous les détails de votre commande! \nVous pouvez télécharger votre facture en pdf.</string>
    <string name="congratulation">Félicitation, commande validée</string>
    <string name="thank_you">Merci de votre confiance!</string>
    <string name="order_number">Votre numéro de commande est:</string>
    <string name="prev">Précédent</string>
    <string name="next">Suivant</string>
    <string name="shipping_mode">Choisir le moyen de livraison</string>
    <string name="standard_shipping">Livraison Standard</string>
    <string name="express_shipping">Livraison Express</string>
    <string name="payment_method_way">Choisir votre moyen de paiement</string>

    <string-array name="Voie">
        <item>Allée</item>
        <item>Avenue</item>
        <item>Boulevard</item>
        <item>Chaussée</item>
        <item>Chemin</item>
        <item>Impasse</item>
        <item>Passage</item>
        <item>Place</item>
        <item>Quai</item>
        <item>Rond-Point</item>
        <item>Ruelle</item>

    </string-array>

    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>
    <string name="type_cvv_code">Saisir le code CVV</string>
    <string name="reviews_ratings">Notes et avis</string>

</resources>