<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.obiangetfils.homefood.fragments.navigation_fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.obiangetfils.homefood.fragments.navigation_fragments.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order"/>

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.obiangetfils.homefood.fragments.navigation_fragments.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_customer_service"
        android:name="com.obiangetfils.homefood.fragments.navigation_fragments.CustomerServiceFragment"
        android:label="@string/menu_customer_service"
        tools:layout="@layout/fragment_customer_service" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.obiangetfils.homefood.fragments.navigation_fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>