<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_material"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/recover_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_person_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_phone_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/user_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_email_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

</RelativeLayout>