<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.obiangetfils.homefood.fragments.sub_fragment.OrderCompletedFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_repas" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        style="@style/material_transparent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/congratulation"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/order_completed_message"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/order_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/order_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="156975625251"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/card_view_completed">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_star"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/thank_you"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/home_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Acceuil"
            android:textStyle="bold"
            android:background="@color/colorWhite"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="Voir mes commandes"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>


</RelativeLayout>