<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_delivery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <LinearLayout

        android:id="@+id/recover_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_person_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="00"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="Voie (Rue, Boulevard ...)"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="Nom de la voie"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="Code Postal"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="Ville"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="Pays"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="Informations supplémentaires"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_mode"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_standart_shipping"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/standard_shipping"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/card_one"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_express_shipping"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/express_shipping"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>